tests/invalid/ifmaxstatements.nim
# Count: 1
# Negative count: 0

let a = 0

if a == 0:
  echo "zero"
elif a == 1:
  echo "one"
elif a == 2:
  echo "two"
else:
  echo "more"
